--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script src="Sound.js"></script>
         <script src="Color Pop.js"></script>  
         <script src="PainterGameWorld.js"></script>  
+        <script src="Score Addition.js"></script>
         <script src="Vector2D.js"></script>
         <script src="Rectangle.js"></script>
         <script src="Mouse.js"></script>
