--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <link href="game-layout.css" ref="stylesheet" />
     <head>
        
         <title>Color Pop</title>
