--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
    
         <script src="Game.js"></script>
         <script src="Sound.js"></script>
-        <script src="Color Pop.js"></script>  
+        <script src="Color Pop.js"></script> 
         <script src="PainterGameWorld.js"></script>  
+        <script src="Tutorial Text.js"></script>
         <script src="Score Addition.js"></script>
+        <script src="Tutorial Steps.js"></script>  
         <script src="Vector2D.js"></script>
         <script src="Rectangle.js"></script>
         <script src="Mouse.js"></script>
