--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <script src="Tutorial Text.js"></script>
         <script src="Score Addition.js"></script>
         <script src="Tutorial Steps.js"></script>  
+        <script src="ModeDescription.js"></script>  
         <script src="Vector2D.js"></script>
         <script src="Rectangle.js"></script>
         <script src="Mouse.js"></script>
