--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <script src="ModeDescription.js"></script>
 <script src="Vector2D.js"></script>
 <script src="Rectangle.js"></script>
+<script src="Touch.js"></script>
 <script src="Mouse.js"></script>
 <script src="Keyboard.js"></script>
 <script src="Canvas.js"></script>
