--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <script src="Score Addition.js"></script>
 <script src="Tutorial Steps.js"></script>
 <script src="ModeDescription.js"></script>
+<script src="TouchColorButtons.js"></script>
 <script src="Vector2D.js"></script>
 <script src="Rectangle.js"></script>
 <script src="Touch.js"></script>
