--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <script src="Score Addition.js"></script>
 <script src="Tutorial Steps.js"></script>
 <script src="ModeDescription.js"></script>
+<script src="ControlPanel.js"></script>
 <script src="TouchColorButtons.js"></script>
 <script src="Vector2D.js"></script>
 <script src="Rectangle.js"></script>
