--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <script src="ModeDescription.js"></script>
 <script src="ControlPanel.js"></script>
 <script src="TouchColorButtons.js"></script>
+<script src="BackButton.js"></script>
 <script src="Vector2D.js"></script>
 <script src="Rectangle.js"></script>
 <script src="Mouse.js"></script>
