--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <script src="ControlPanel.js"></script>
 <script src="TouchColorButtons.js"></script>
 <script src="BackButton.js"></script>
+<script src="Settings.js"></script>
 <script src="Vector2D.js"></script>
 <script src="Rectangle.js"></script>
 <script src="Mouse.js"></script>
