--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" width="device-width" initial-scale=0.9 user-scaleable=0>
-    <title>Color Pop</title>
+    <title>Quizlet</title>
 </head>
 
 
